--- a/public/style.css
+++ b/public/style.css
@@ -1,21 +1,36 @@
 /* width */
+*:hover {
+    cursor: pointer;
+}
+
 ::-webkit-scrollbar {
-    width: 7px;
+  width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px #ffffff;
+  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #42c3be;
-    border-radius: 10px;
+  background: #e2e2e2;
+  border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #1976d2;
+  background: #8c8c8c;
+}
+
+.myIcon {
+  color: #000000;
+  vertical-align: middle;
+  padding-right: 1vw;
+  font-weight: bold;
+}
+
+.myIcon:hover {
+  opacity: 0.7;
 }
